Fix Client get args 0